--- a/Web App/views/pages/landing.ejs
+++ b/Web App/views/pages/landing.ejs
@@ -8,9 +8,9 @@
         <li>Save those Holiday Snaps somewhere safe!</li>
         <li>Revisit the good times!</li>
         <li>Get Hotspots for most locations!</li>
+        <li>throw a dart and get a random location!</li>
     </ul>
 </div>
-
 <div id="instructions-div">
     <h2 style="text-align: center; margin: 10px; ">How to Use</h2>
 
