--- a/Web App/views/partials/header.ejs
+++ b/Web App/views/partials/header.ejs
@@ -47,7 +47,7 @@
             {name: "Home", path: "/home"},
             {name: "History", path: "/history"},
             {name: "Wishlist", path: "/wishlist"},
-            {name: "Settings", path: "/settings"},
+            {name: "Where To?", path: "/where-to"},
             {name: "Account", path: "/account"},
             {name: "Logout", path: "/logout"}
         ];
